<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"

    tools:context="com.first.sab.ebook.activities.CreateActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@drawable/mainlogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/your_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/create_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/your_age"
                android:inputType="date" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/your_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/your_pas"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edit_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/butn_shape"
                android:padding="10dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/haveaccount"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
</LinearLayout>